--- a/source/_sass/bootstrap/_code.scss
+++ b/source/_sass/bootstrap/_code.scss
@@ -41,7 +41,7 @@ kbd {
 pre {
   display: block;
   padding: (($line-height-computed - 1) / 2);
-  margin: 0 0 ($line-height-computed / 2);
+  margin: 0 0 calc($line-height-computed / 2);
   font-size: ($font-size-base - 1); // 14px to 13px
   line-height: $line-height-base;
   word-break: break-all;
