--- a/source/_sass/bootstrap/mixins/_grid.scss
+++ b/source/_sass/bootstrap/mixins/_grid.scss
@@ -6,15 +6,15 @@
 @mixin container-fixed($gutter: $grid-gutter-width) {
   margin-right: auto;
   margin-left: auto;
-  padding-left:  ($gutter / 2);
-  padding-right: ($gutter / 2);
+  padding-left:  calc($gutter / 2);
+  padding-right: calc($gutter / 2);
   @include clearfix;
 }
 
 // Creates a wrapper for a series of columns
 @mixin make-row($gutter: $grid-gutter-width) {
-  margin-left:  ceil(($gutter / -2));
-  margin-right: floor(($gutter / -2));
+  margin-left:  ceil(calc($gutter / -2));
+  margin-right: floor(calc($gutter / -2));
   @include clearfix;
 }
 
